# H5Analysis

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.md  histogram.md  index.rst  installation.md  metadata.md  objectmath.md  quickstart.md  scatter.md
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
src/h5analysis/: LoadData.py  MathData.py  ReadData.py  __init__.py  add_subtract.py  beamline_info.py  config.py  data_1d.py  data_2d.py  data_3d.py  datautil.py  histogram.py  interpolate.py  mesh.py  parser.py  plot_exporter.py  readutil.py  scatter.py  simplemath.py  spec_config.py  stitch.py  util.py  validation.py
src/h5analysis/beamlines/: REIXS.py  __init__.py
src/h5analysis/static/: __init__.py  xraydb
