[metadata]
name = h5analysis
version = 0.0.1
author = Patrick Braun
author_email = patrick.braun@lightsource.ca
description = Library to analyse, plot, and export data stored in HDF5 files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmb399/H5Analysis
project_urls =
    Bug Tracker = https://github.com/pmb399/H5Analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    numpy>=1.26.1
    pandas>1.5.0
    bokeh>=2.3.3,<3
    scipy>=1.11.3
    ipywidgets
    ipyfilechooser==0.6.0
    h5py>=3.10.0
    shapely>=2.0.2
    parse
    matplotlib
    ffmpeg
[options.packages.find]
where = src
