[metadata]
name = h5analysis
version = attr: setuptools_scm.get_version
author = Patrick Braun
author_email = patrick.braun@usask.ca
description = Library to analyse, plot, and export data stored in HDF5 files.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/pmb399/H5Analysis
project_urls =
    Documentation = https://h5analysis.readthedocs.io/latest/
    Source = https://github.com/pmb399/H5Analysis
    Tutorial = https://reixs.lightsource.ca/workshops/reixs-sxs-workshop-2023/
    Bug Tracker = https://github.com/pmb399/H5Analysis/issues
    Canadian Light Source = https://lightsource.ca
    HDF Group = https://www.hdfgroup.org/
    NeXus = https://manual.nexusformat.org/
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Framework :: Jupyter
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Chemistry
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    numpy>=1.26.1
    pandas>2.1.0
    bokeh>=3
    scipy>=1.11.3
    ipywidgets>=7.6.5
    ipyfilechooser==0.6.0
    h5py>=3.10.0
    shapely>=2.0.2
    parse>=1.19.1
    scikit-image>=0.19.2
    colorcet>=3.1.0
    matplotlib>=3.5.2
    lmfit>=1.2.2

[options.extras_require]
FFMPEG=
    ffmpeg>=1.4

EXAFS=
    xraylarch>=0.9.71

BASELINE=
    pybaselines>=1.1.0

[options.packages.find]
where = src
